<resources>
    <string name="app_name">GADS2020PracticeApp</string>
    <string name="submit">Submit</string>
    <string name="leaderboard">LEADERBOARD</string>

    <string-array name="leader_board_type">
        <item>Learning Leaders</item>
        <item>Skill IQ Leaders</item>
    </string-array>

    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_github_link">Project on GITHUB (link)</string>
    <string name="submission_not_successful">Submission Not Successful</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="yes">Yes</string>

</resources>